# scatt-companion

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.html  README.md  THIRD-PARTY-LICENSES.md  build_windows.nsi  make_icon.py  pyproject.toml  requirements.txt  scatt-gui.command  scatt-watch.command  scatt_analysis.py  scatt_auto_update.py  scatt_backup.py  scatt_ble_scan.py  scatt_companion.spec  scatt_concurrency_test.py  scatt_export.py  scatt_feedback.py  scatt_gui.py  scatt_heart.py  scatt_home.py  scatt_i18n.py  scatt_level_tab.py  scatt_logging.py  scatt_metric_docs.py  scatt_modes.py  scatt_paths.py  scatt_pdf.py  scatt_profile.py  scatt_storage.py  scatt_target.py  scatt_update.py  scatt_watch.py  setup_app.py
.github/workflows/: build-windows.yml
assets/: icon.icns
docs/: README.md  index.html  manifest.json  reverse-engineering.html  robots.txt  scatt-metrics-investigation.html  sitemap-0.xml  sitemap-index.xml  specs.html  style.css
docs/_astro/: Hero.astro_astro_type_script_index_0_lang.DeSlY435.js  index.BNvaiLCc.css  index.Bkzv5dmA.css  index.eBhu_hRM.css
docs/metrics-investigation/: index.html
docs/reverse-engineering/: index.html
docs/specs/: index.html
tests/: conftest.py  test_analysis.py  test_auto_update.py  test_backup.py  test_feedback.py  test_home.py  test_paths.py  test_profile.py  test_target.py  test_update.py
video/: package-lock.json  package.json  tsconfig.json
video/scripts/: generate_bgm.py
video/src/: CinematicPV.tsx  MarketingPV.tsx  Root.tsx  WebsiteDemo.tsx
web/: astro.config.mjs  package-lock.json  package.json
web/public/: manifest.json
(+25 files in other folders)
